2004-02-09  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: implemented secstring and secalloc(ator)
          classes using mlock (like gpg does). You need
          to be suid root for it to work, though.
        * pwsafe: random number generator is seeded from
          ~/.rnd.
        * pwsafe: release 0.1.3

2004-01-26  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: fixed -V/--version segfault.
        * pwsafe: fixed getyn() brokenness.
        * pwsafe: improved searching algorithm, now
          if the string perfecting matches (without
          regex matching) it's a match. And added
          case sensativity of -I/--case or if search
          string contains uppercase.
        * pwsafe: Split OP_LIST into OP_LIST and OP_EMIT.
          OP_EMIT is implicit if -u or -p is given.
        * pwsafe: implemented -e/--edit. (Renamed -e/--echo
          to -E/--echo.)
        * pwsafe: implemented randomly chosen passwords.
        * pwsafe: fixed char-at-a-time (~ICANON) buffering
          on sparc.
        * pwsafe: release 0.1.2
 
2004-01-23  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: updated man page and usage()
          both of which were obsolete.
        * pwsafe: released 0.1.1

2004-01-22  Nicolas S. Dade  <ndade@nsd.dyndns.org>

        * pwsafe: initial release version 0.1.0

2004-01-08  Nicolas S. Dade  <ndade@nsd.dyndns.org>

	* pwsafe: initial version.

